# Tetris-Community-Server

./: .gitignore  .gitmodules  Cargo.toml  README.md
Tetris-Community/: README.md  tetriscommunity.md
public/: combined.html  commit.html  commit.js  index.css  index.html  manager.html  manager.js  markdown.css
public/css/: commit.css  index.css  manager.css  markdown.css
public/js/: combined.js  commit.js  index.js  manager.js
src/: commit.sh  main.rs  pull.sh  render.rs
